--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,1 +1,1 @@
-<span style="font-size: 16pt; font-weight: 800;">LPR for [Electoral] Geeks<span>
+<span style="font-size: 16pt; font-weight: 800;">Local Proportional Representation<span>
