As published up to 4/2/2017.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,1 +1,15 @@
+
+<title>Local Proportional Representation</title>
+<meta name="description" content="Local Proportional Representation: Regionally proportional, Locally Representative.">
 <meta http-equiv="refresh" content="0; url=welcome/index.html"/>
+
+  <meta property="og:url"           content="http://www.localpr.ca" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="Local Proportional Representation" />
+  <meta property="og:description"   content="Regionally Proportional. Locally Representative." />
+  <meta property="og:image"         content="http://www.localpr.ca/static/Local-PR-logo.png" />
+
+
+<h1>Local Proportional Representation</h1>
+
+<h3>Regionally Proportional.  Locally Representative.</h3>
