--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,2 +1,12 @@
 
 <link href="/css/lpr.css" rel="stylesheet">
+<meta property="fb:admins" content="100015234314579"/>
+
+<meta name="description" content="Local Proportional Representation: Regionally proportional, Locally Representative.">
+
+<meta property="og:url"           content="http://www.localpr.ca" />
+<meta property="og:type"          content="website" />
+<meta property="og:title"         content="Local Proportional Representation" />
+<meta property="og:description"   content="Regionally Proportional. Locally Representative." />
+<meta property="og:image"         content="http://www.localpr.ca/static/Local-PR-logo.png" />
+
