--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,1 +1,16 @@
+<!--
 <span style="font-size: 16pt; font-weight: 800;">Local Proportional Representation<span>
+	-->
+
+<!-- Facebook stuff for the "like" button -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- The actual logo -->
+<img src="/static/Local-PR-logo.png"></img>
