--- a/static/css/lpr.css
+++ b/static/css/lpr.css
@@ -72,3 +72,53 @@ body {
 	font-size: 11pt;
 	font-weight: 300;
 }
+
+/* Hide the default title; we want a different one. */
+body[data-url="/welcome/"] h1:first-child {
+	display: none;
+}
+
+/* Hide the default title; we want a different one. */
+body[data-url="/basics/history/"] h1:first-child {
+	display: none;
+}
+
+#chapter .preview h3 {
+	text-align: left;
+	margin-bottom: 0px;
+}
+
+#chapter .preview p {
+	text-align: left;
+	font-weight: 400;
+	font-size: 16px;
+	color: #323232;
+	margin-top: 0.5rem;
+	margin-bottom: 0.25rem;
+}
+
+/*
+ * Background for the logo
+ */
+#header-wrapper {
+	background-color: #322A38;
+}
+
+.add-your-name {
+	color: white;
+	background-color: red;
+	border: red 2px solid;
+	margin-top: 7px;
+	font-size: 18px;
+	line-height: 1.33333;
+	border-radius: 6px;
+	font-weight: 400;
+	white-space: nowrap;
+	vertical-align: middle;
+	touch-action: manipulation;
+	cursor: pointer;
+	text-align: center;
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+}
