--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 
 <title>Local Proportional Representation</title>
 <meta name="description" content="Local Proportional Representation: Regionally proportional, Locally Representative.">
-<meta http-equiv="refresh" content="0; url=welcome/index.html"/>
+<meta http-equiv="refresh" content="0; url=basics/index.html"/>
 
   <meta property="og:url"           content="http://www.localpr.ca" />
   <meta property="og:type"          content="website" />
